[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Paolo Simone <paolo.simone@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.3"
lazy_static = "1.4.0"
regex = "1"
itertools = "0.9.0"
num = "0.3.1"
